--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,12 @@
 @font-face
 {
+  font-family: Neocyr;
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face
+{
   font-family: Aaargh;
   font-weight: normal;
   font-style: normal;
@@ -8,8 +15,33 @@
 body
 {
   font-family: Aaargh;
-  background-image: url('pebblefish.png');
-  background-size: 150%;
-  padding-top: 20%;
+  background-color: #007086;
+  background-image: url('images/pebblefishfinal.png');
+  background-size: 100%;
+  background-repeat: no-repeat;
+  padding-top: 60%;
+  padding-bottom: 100px;
+}
+
+p
+{
+  color: #F6F8F9;
+  padding-left: 8%;
+  padding-right: 32%;
+}
+
+h1
+{
+  font-family: Neocyr;
   padding-left: 30%;
+}
+
+h2
+{
+  color: #F6F8F9;
+  font-family: Neocyr;
+  font-style: normal;
+  font-weight: normal;
+  padding-left: 30%;
+  padding-top: 20px;
 }
